--- a/src/main/resources/assets/tbtmats/lang/en_us.lang
+++ b/src/main/resources/assets/tbtmats/lang/en_us.lang
@@ -1,17 +1,27 @@
+#normal items' name
 item.agc_ingot.name=A.G.C Ingot
+
+#tools' name
 item.agc_sword.name=A.G.C Sword
 item.agc_pickaxe.name=A.G.C Pickaxe
 item.agc_axe.name=A.G.C Axe
 item.agc_shovel.name=A.G.C Shovel
 item.agc_hoe.name=A.G.C Hoe
 
+#armors' name
+item.agc_helmet.name=A.G.C Helmet
+item.agc_chestplate.name=A.G.C Chestplate
+item.agc_leggings.name=A.G.C Leggings
+item.agc_boots.name=A.G.C Boots
+
+#blocks' name
 tile.agc_block.name=A.G.C Block
 tile.agc_ore.name=A.G.C Ore
 
+#tabs' name
 itemGroup.material_tab=TBTF: Materials
 itemGroup.block_tab=TBTF: Blocks
 itemGroup.tool_tab=TBTF: Tools
 itemGroup.armor_tab=TBTF: Armor
 itemGroup.food_tab=TBTF: Food
 itemGroup.misc_tab=TBTF: Misc
-
