--- a/src/main/resources/assets/tbtmats/lang/zh_cn.lang
+++ b/src/main/resources/assets/tbtmats/lang/zh_cn.lang
@@ -14,6 +14,10 @@ item.agc_chestplate.name=A.G.C 铠甲
 item.agc_leggings.name=A.G.C 护腿
 item.agc_boots.name=A.G.C 靴子
 
+#foods' name
+item.agc_apple.name=A.G.C 苹果
+item.slide_chicken.name=滑稽
+
 #blocks' name
 tile.agc_block.name=A.G.C 块
 tile.agc_ore.name=A.G.C 矿
