--- a/src/main/resources/assets/tbtmats/lang/en_us.lang
+++ b/src/main/resources/assets/tbtmats/lang/en_us.lang
@@ -1,6 +1,7 @@
 #normal items' name
 item.agc_ingot.name=A.G.C Ingot
 item.agc_stick.name=A.G.C Stick
+item.compressed_workbench.name=Compressed Workbench
 
 #tools' name
 item.agc_sword.name=A.G.C Sword
