--- a/src/main/resources/assets/tbtmats/lang/zh_cn.lang
+++ b/src/main/resources/assets/tbtmats/lang/zh_cn.lang
@@ -1,7 +1,7 @@
 #normal items' name
 item.agc_ingot.name=A.G.C 锭
 item.agc_stick.name=A.G.C 棍
-item.compressed_workbench.name=压缩工作台ss
+item.compressed_workbench.name=压缩工作台
 
 #tools' name
 item.agc_sword.name=A.G.C 剑
