--- a/src/main/resources/assets/tbtmats/lang/zh_cn.lang
+++ b/src/main/resources/assets/tbtmats/lang/zh_cn.lang
@@ -2,6 +2,7 @@
 item.agc_ingot.name=A.G.C 锭
 item.agc_stick.name=A.G.C 棍
 item.compressed_workbench.name=压缩工作台
+item.small_thread.name=小型线坨
 
 #tools' name
 item.agc_sword.name=A.G.C 剑
