--- a/src/main/resources/assets/tbtmats/lang/en_us.lang
+++ b/src/main/resources/assets/tbtmats/lang/en_us.lang
@@ -2,6 +2,7 @@
 item.agc_ingot.name=A.G.C Ingot
 item.agc_stick.name=A.G.C Stick
 item.compressed_workbench.name=Compressed Workbench
+item.small_thread.name=Small Thread
 
 #tools' name
 item.agc_sword.name=A.G.C Sword
